--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Alok's Resume</title>
+  <title>Alok Chauhan's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url= https://github.com/imAllok/Alok_resume/blob/master/Latest_Resume_Alok_2019.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
